--- a/app/src/main/res/layout/activity_graph_line.xml
+++ b/app/src/main/res/layout/activity_graph_line.xml
@@ -82,7 +82,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:isScrollContainer="true"
-                android:scrollbars="vertical" />
+                android:scrollbars="vertical"
+                android:textStyle="bold"/>
 
         </LinearLayout>
 
